--- a/public/css/AI.css
+++ b/public/css/AI.css
@@ -1,19 +1,7 @@
 body,
 html {
   min-height: 100%;
-}
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(180deg, #80cec8, #e3f7f5);
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #000;
-  font-family: Karla, Helvetica Neue, sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
-  margin: 0;
-  padding: 0;
+  font-family: 'Poppins', sans-serif; /* Apply Poppins font */
 }
 @media only screen and (max-device-width: 600px) {
   body {
@@ -28,7 +16,7 @@ body {
   font-family: 'Karla', sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(135deg, #a8e1e5, #f0f4f7);
+  background: #fbf7f0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,7 +29,7 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  height: 800px;
+  height: 770px;
 }
 
 @media (max-width: 768px) {
@@ -72,7 +60,7 @@ header {
 /* Welcome section */
 .welcome-section {
   text-align: center;
-  padding: 20px;
+  padding-bottom: 20px;
 }
 
 .hero-img {
@@ -89,7 +77,7 @@ h1 {
 
 p {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   color: #666;
   margin: 5px 0;
 }
@@ -125,8 +113,8 @@ p {
 #send-btn {
   margin-left: 10px;
   padding: 10px 15px;
-  background-color: #0084ff;
-  color: white;
+  background-color: #033a35;
+  color: #fcd961;
   border: none;
   border-radius: 10px;
   font-size: 16px;
@@ -134,7 +122,7 @@ p {
 }
 
 #send-btn:hover {
-  background-color: #006bbd;
+  background-color: #033a35;
 }
 
 /* Chat message styles */
@@ -146,14 +134,14 @@ p {
 }
 
 .chat-message.user {
-  background-color: #0084ff;
-  color: white;
+  background-color: #e5f0e6;
+  color: #033a35;
   align-self: flex-end;
 }
-
 .chat-message.ai {
-  background-color: #f1f0f0;
+  background-color: #fbf7f0;
   color: black;
-  align-self: flex-start;
+  align-self: flex-start; /* Align AI message to the left */
+  margin-right: 0; /* Remove any right margin */
+  margin-left: 180px;
 }
-
